--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,9 @@
 python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
+
+# Регистрируем кастомные маркировки
+markers =
+    users: Маркировка для тестов, связанных с пользователями.
+    regression: Маркировка для регрессионных тестов.
+    authentication: Маркировка для тестов, связанных с аутентификацией.
